--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Monera Currency ASIC Friendly Secure Private Cryptocurrency</title>
+
+    <meta name="description" content="Monera is a privacy-focused cryptocurrency based on Monero
+    with support for ASICs.">
   </head>
   <body>
     <noscript>
